examples/test/testpolicy9927.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9927
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key5: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value26
          key44: value30
          key14: value14
      podSelector:
        matchLabels:
          key40: value11
